--- a/about.html
+++ b/about.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>About</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <h4>Welcome to GIT</h4>
-    <a href="./about.html">About</a>
+    <h1>This is About</h1>
 </body>
 </html>
